--- a/app/src/main/res/layout/usa_form3.xml
+++ b/app/src/main/res/layout/usa_form3.xml
@@ -253,6 +253,33 @@
                     android:hint="No"/>
             </RadioGroup>
         </LinearLayout>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/usa_form_national_identification_number"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
+        </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/usa_form_security_number"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
+        </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/usa_form_taxpayer_number"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
+        </android.support.design.widget.TextInputLayout>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="28dp"
