--- a/app/src/main/res/layout/appicant_form.xml
+++ b/app/src/main/res/layout/appicant_form.xml
@@ -887,6 +887,14 @@
                     android:inputType="numberDecimal"/>
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="" />
+        </LinearLayout>
 
 
         <Button
