--- a/app/src/main/res/layout/usa_form11.xml
+++ b/app/src/main/res/layout/usa_form11.xml
@@ -5,10 +5,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_marginTop="10dp"
+        android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -17,7 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="@string/contact_person_us"
+                android:text="@string/occupation_us"
                 android:textColor="@color/colorAccent"/>
             <android.support.v7.widget.AppCompatSpinner
                 android:layout_width="match_parent"
@@ -35,64 +35,42 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/contact_person_name_us"
+                android:hint="@string/employer_name"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
         </android.support.design.widget.TextInputLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="@string/relation_with_person"
-                android:textColor="@color/colorAccent"/>
-            <android.support.v7.widget.AppCompatSpinner
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
-            </android.support.v7.widget.AppCompatSpinner>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorAccent"/>
-        </LinearLayout>
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/address"
+                android:hint="@string/employer_address"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
         </android.support.design.widget.TextInputLayout>
-        <LinearLayout
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
+            android:layout_height="wrap_content">
+            <EditText
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="@string/state_us"
-                android:textColor="@color/colorAccent"/>
-            <android.support.v7.widget.AppCompatSpinner
+                android:layout_height="wrap_content"
+                android:hint="@string/city"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
+        </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
-            </android.support.v7.widget.AppCompatSpinner>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorAccent"/>
-        </LinearLayout>
+                android:layout_height="wrap_content"
+                android:hint="@string/country"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
+        </android.support.design.widget.TextInputLayout>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:textColor="@color/colorAccent"
-            android:text="@string/phone_no_us"/>
+            android:text="@string/phone_no"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -128,4 +106,5 @@
             android:text="Save &amp; Submit"
             android:textColor="#fff"/>
     </LinearLayout>
+
 </android.support.v4.widget.NestedScrollView>
